# spiele

./: CMakeLists.txt  README.md  flash_spiele0.uf2  flash_spiele1.uf2  flash_spiele3.uf2  spiele.c  spiele.geany  spiele.uf2  yd_rp2040.h
include/: ILI9341.h  buttons.h  melodys.h  ranking.h  snake.h  sound.h  tetris.h
include/ILI9341/: CMakeLists.txt  ILI9341.c
include/buttons/: CMakeLists.txt  buttons.c
include/graphics/: blocks15x15.h  digit15x20.h  font12x12.h  snake15x15.h
include/libs/flash/: CMakeLists.txt  flash.c  flash.h
include/libs/ili9341/: CMakeLists.txt  ili9341.c  ili9341.h
include/libs/sound/: CMakeLists.txt  sound.c  sound.h
include/melodys/: CMakeLists.txt  melodys.c
include/ranking/: CMakeLists.txt  ranking.c
include/ranking/digits/: pigit15x20.h  rang25x25.h
include/snake/: CMakeLists.txt  snake.c
include/sound/: CMakeLists.txt  sound.c
include/tetris/: CMakeLists.txt  tetris.c
klotski/: CMakeLists.txt  klotski.c  klotski.h
klotski/graphics/: 1x1_i.data  1x1_n.data  1x2_i.data  1x2_n.data  2x1_i.data  2x1_n.data  2x2_i.data  2x2_n.data  graphic  graphic.c  graphics.h
klotski/solver_poland/: 17.5.cpp  gaensebluemchen.solved  only_18_moves.solved  only_18_moves.txt  solver
snake/: CMakeLists.txt  snake.c  snake.h
tetris/: CMakeLists.txt  tetris.c  tetris.h
